# RCT

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  rct_index_52428800_8192_120.html  rct_index_repair_120.html
include/: alternative_code.hpp  baseline.hpp  config_util.hpp  file_util.hpp  geo_util.hpp  heap_max_min.hpp  heap_min_max.hpp  k2_tree_representation_lite.hpp  knn_support_helper.hpp  knn_support_helper_rtree.hpp  log_object.hpp  log_object_dac.hpp  log_object_gn.hpp  log_object_gn_c_diff_redundant.hpp  log_object_gn_c_diff_separately.hpp  log_object_gn_max_wr_min.hpp  log_object_lite.hpp  log_object_no_mbrs.hpp  log_object_no_min_max.hpp  log_object_v1.hpp  log_object_v2.hpp  log_object_v3.hpp  log_reference.hpp  log_reference_direct_access.hpp  log_reference_gn.hpp  log_reference_no_min_max.hpp  log_reference_sparse.hpp  log_reference_sparse_no_min_max.hpp  log_reference_v2.hpp  main.hpp  math_util.hpp  oz_vector.hpp  permutation_labels.hpp  prev_support_v.hpp  rct_algorithm.hpp  rct_algorithm_gn.hpp  rct_algorithm_rtree.hpp  rct_algorithm_rtree_lite.hpp  rct_algorithm_rtree_no_min_max.hpp  rct_direct_access_index.hpp  (+26 more)
plots/: estimation_size.py  estimation_size_1024.py  estimation_size_256.py  estimation_size_4096.py  rct_index_2097152_1024.html  rct_index_3145728_1024.html  rct_index_4194304_1024.html  rct_index_5242880_1024.html  rct_index_6291456_1024.html  rct_index_dac_10485760_1024.html  rct_index_dac_2097152_1024.html  rct_index_dac_3145728_1024.html  rct_index_dac_4194304_1024.html  rct_index_dac_5242880_1024.html  rct_index_dac_6291456_1024.html  rct_index_dac_7340032_1024.html  rct_index_dac_8388608_1024.html  rct_index_dac_9437184_1024.html
queries/: so.txt  so.txt_r  ti_l.txt  ti_l.txt_r  ti_s.txt  ti_s.txt_r  traj.txt  ts_l.txt  ts_l.txt_r  ts_s.txt  ts_s.txt_r
result/: out.txt  rct_index_10485760_1024.html  rct_index_10_1024.json  rct_index_20971520_1024.html  rct_index_20_1024.json  rct_index_30_1024.json  rct_index_31457280_1024.html  rct_index_40_1024.json  rct_index_41943040_1024.html  rct_index_dac_10485760_1024.html  rct_index_dac_20971520_1024.html  rct_index_dac_31457280_1024.html  rct_index_dac_41943040_1024.html  size.py  stats_rct
src/: alternative_code.cpp  baseline_times.cpp  cut_dataset.cpp  estimation_size.cpp  loading_reference.cpp  lz_parser_repair_test.cpp  main.cpp  proba.cpp  rct_dac_main.cpp  rct_fix_disap.cpp  rct_gn_test.cpp  rct_main.cpp  rct_main_gn.cpp  rct_main_gn_max_wr_min.cpp  rct_main_gn_redundant.cpp  rct_main_gn_separately.cpp  rct_main_multiple.cpp  rct_main_multiple_rev.cpp  rct_main_repair.cpp  rct_main_repair_v2.cpp  rct_main_v2.cpp  rct_test.cpp  rct_test_multiple.cpp  rct_test_multiple_rtree.cpp  rct_test_multiple_rtree_lite.cpp  rct_test_multiple_rtree_no_min_max.cpp  rct_test_multiple_sparse.cpp  rct_test_multiple_sparse_rtree.cpp  rct_test_multiple_sparse_rtree_no_min_max.cpp  rct_test_repair.cpp  rct_test_repair_rtree.cpp  rct_test_rtree.cpp  rct_test_v2.cpp  rct_times.cpp  rct_times_gn.cpp  rct_times_gn_max_wr_min.cpp  rct_times_gn_redundant.cpp  rct_times_gn_separately.cpp  rct_times_multiple.cpp  rct_times_multiple_rtree.cpp  (+38 more)
test/: test.cpp
